falta corregir error en las dependencias, asi como continuar con el diseno de la interfaz